--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
                     if (!dockerInstalled) {
                         echo "Docker não instalado. Instalando agora..."
                         sh 'curl -fsSL https://get.docker.com -o get-docker.sh'
-                        sh 'sh get-docker.sh'
+                        sh 'sudo sh get-docker.sh'
                     }
 
                     // Exibe as versões
